# jupyter-fun

./: .gitignore  Bergen Bysykkel API.ipynb  Bingo.ipynb  Hunder.ipynb  Pipfile  README.md  default.nix  pyproject.toml  requirements.txt
