[tool.poetry]
name = "jupyter-fun"
version = "0.1.0"
description = ""
authors = ["Sondre Aasemoen <sondre@eons.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.5"
requests = "^2.31.0"
geopy = "^2.2.0"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"
plotly = "^5.10.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
